project/test/semantics/bad/input/Bad69_shouldCheckTypesOfListElements.ty
singleton class GenericTypes {
    
    actions: {
        main: () -> Void = {
            val list1: List[String] = 
                List[String]("xa", "yy", 3, "dd"); // UnexpectedTypeError
        }
    }
}
